# sugar-sugar

./: .dockerignore  .env.template  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  data.py  partinfodeutsch.txt  partinfoenglish.txt  prediction_statistics.csv  pyproject.toml
.github/workflows/: ci.yml
assets/: autosize-iframe.js  dismiss-message.js  lang.css  location-autocomplete.css  location-autocomplete.js  location-suggestions.json  mobile.css  number-inputs.js  orientation.css  share.css
data/: .~lock.example.csv#  example.csv  generic_sources_metadata.json  glucosedao_contacts.md  processed_example.csv
data/input/: prediction_ranking.csv
data/input/users/: 20260125_011533_Copy_of_000-1_mai-14_mai_2025-Clarity_Export__Patient_2025-05-14_154517_(1).csv
data/subjects/: cohort_index.json
data/subjects/loop_1082/: info.txt  loop_1082_chronological.csv  loop_1082_split_meta.json
data/subjects/loop_467/: info.txt  loop_467_split_meta.json
data/subjects/loop_556/: info.txt  loop_556_chronological.csv  loop_556_split_meta.json
data/subjects/loop_590/: info.txt  loop_590_split_meta.json
data/subjects/loop_730/: info.txt  loop_730_chronological.csv  loop_730_split_meta.json
data/subjects/loop_745/: info.txt  (+1 more)
docs/: mobile-version.md  share-ops.md  technical-specification.md
logs/: sugar_sugar.json
scripts/: mobile_shots.py  render_share_card_previews.py
sugar_sugar/: __init__.py  app.py  build_city_data.py  cgm_csv_glucose_tokens.py  config.py  consent.py  consent_notice_text.py  data.py  encouragement.py  figures.py  formats.py  generic_sources_metadata.py  i18n.py  layout.py  location_catalog.py  location_city_i18n.py  location_countries.py  location_suggestions.py  metrics.py  prediction_window_context.py  resume_store.py  share_png.py  static_markdown.py  subject_sources.py  wsgi.py
sugar_sugar/ai_models/: base.py  glumind_adapter.py  normalization.py  registry.py
sugar_sugar/components/: ag_grid.py  consent_form.py  consent_info.py  ending.py  glucose.py  glucose_chart.py  header.py  instructions.py  landing.py  metrics.py  navbar.py  prediction_table.py  predictions.py  share.py  startup.py  submit.py
sugar_sugar/data/: top_cities_by_country.json
sugar_sugar/models/: __init__.py  base.py  chronos_model.py  events.py  inflight.py  multi.py  registry.py  remote.py  serialization.py
sugar_sugar/translations/: ui.de.yml  ui.en.yml  ui.es.yml  ui.fr.yml  ui.ro.yml  ui.ru.yml  ui.uk.yml  ui.zh.yml
tests/: conftest.py  share_fixtures.py  test_cgm_csv_glucose_tokens.py  test_location_suggestions.py  test_medtronic_import.py  test_navbar.py  test_server_side_dataset.py  test_share_png.py  test_startup_form_validation.py  test_subject_sources.py  test_upload_pipeline_integration.py
tests/testdata/: .gitignore  Clarity_Export_synthetic.csv  Clarity_Export_synthetic_unified.csv  FreeStyle_Libre_3_synthetic.csv  FreeStyle_Libre_3_synthetic_unified.csv  Unified_synthetic_unified.csv
(+4 files in other folders)
