[project]
name = "sugar-sugar"
version = "0.1.0"
description = "A data access and visualization tool for glucose monitoring data"
authors = [
    {name = "Anton Kulaga", email = "Antonkulaga@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.3",
    "plotly>=6.1.2",
    "polars>=1.30.0",
    "pandas>=2.3.0",
    "typer>=0.16.0",
    "numpy>=2.3.0",
    "pycomfort>=0.0.18",
    "dotenv>=0.9.9",
]

[project.scripts]
start = "sugar_sugar.app:cli_main"

[dependency-groups]
dev = [
    "pytest>=8.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sugar_sugar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
