[project]
name = "sugar-sugar"
version = "0.2.2"
description = "A data access and visualization tool for glucose monitoring data"
authors = [
    {name = "Anton Kulaga", email = "Antonkulaga@gmail.com"},
    {name = "Livia Zaharia", email = "liviazaharia2020@gmail.com"},   
    {name = "Newton Winter", email = "isoutthere@gmail.com"},
]
maintainers = [
    {name = "Anton Kulaga", email = "Antonkulaga@gmail.com"},
    {name = "Newton Winter", email = "isoutthere@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "typer>=0.25.1",
    "numpy>=2.3.0",
    "pycomfort>=0.0.18",
    "dotenv>=0.9.9",
    "eliot>=1.18.0",
    "i18nice[yaml]>=0.16.0",
    "markdown>=3.10.2",
    "kaleido>=1.3.0",
    "segno>=1.6.0",
    "cgm-format[cli]>=0.8.2",
]

[project.scripts]
start = "sugar_sugar.app:cli_main"
chart = "sugar_sugar.app:chart_main"
share = "sugar_sugar.app:share_main"
setup-chrome = "sugar_sugar.app:setup_chrome_main"

[dependency-groups]
dev = [
    "pytest>=8.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sugar_sugar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
